# bidirectional

./: .gitignore  LICENSE  README.md  index.tauri.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: publish.yml
public/: index.html  tailwind.build.css
src/: App.css  App.js  Converter.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: AlertCopy.js  ClearSvg.js  CopySvg.js  PasteSvg.js
src/components/History/: HistoryItem.js  index.js
src/components/icons/: TextSvg.js
src/utils/hooks/: useHistory.js
