[package]
name = "bidirectional"
version = "0.2.0"
description = "Write Arabic text on apps that don't support the bidirectional text."
authors = [ "Samir Djelal" ]
license = "MIT"
repository = "https://github.com/samirdjelal/bidirectional"
default-run = "bidirectional"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "bidirectional"
path = "src/main.rs"
