[package]
name = "bidirectional"
version = "0.1.0"
description = "Write Arabic text on apps that don't support the bidirectional text."
authors = ["Samir Djelal"]
license = "MIT"
repository = "https://github.com/samirdjelal/bidirectional"
default-run = "bidirectional"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.1", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
